<resources>
    <string name="app_name">Budget</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="member_list">Member list</string>
    <string name="revenues">Revenues</string>
    <string name="divergence">Divergence</string>
    <string name="_8942">⋮</string>
    <string name="delete">Delete</string>
    <string name="new_member">New Member</string>
    <string name="search">Search</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="birthday">Birthday</string>
    <string name="phone_number">Phone number</string>
    <string name="save">Save</string>
    <string name="digit">⋮</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Edit</string>
    <string name="title_activity_edit_chorus_member">EditChorusMember</string>
    <string name="title_activity_add_new_membership_free">AddNewMembershipFree</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="money">Money</string>
    <string name="plus_money">+ money</string>
    <string name="minus_money">- money</string>
    <string name="title_activity_edit_current_member">EditCurrentMember</string>
    <string name="member_avatar">Member avatar</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="cancel">cancel</string>
</resources>
