<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/add_money_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus_money" />

    <LinearLayout
        android:id="@+id/ll_table_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/add_money_btn"
        android:layout_marginTop="16dp">

        <TextView
            style="@style/tableHeadCells"
            android:layout_weight="3"
            android:text="@string/year"/>

        <TextView
            style="@style/tableHeadCells"
            android:layout_marginStart="1dp"
            android:layout_weight="4"
            android:text="@string/month" />

        <TextView
            style="@style/tableHeadCells"
            android:layout_marginStart="1dp"
            android:layout_weight="3"
            android:text="@string/money" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        app:layout_constraintTop_toBottomOf="@id/ll_table_header"
        android:id="@+id/rv_periods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager">

    </android.support.v7.widget.RecyclerView>

    <TextView
        app:layout_constraintTop_toBottomOf="@id/rv_periods"
        android:id="@+id/tv_total_summ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="8dp"
        android:textColor="#000"
        android:textSize="20dp" />
</android.support.constraint.ConstraintLayout>