<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <Button
        android:id="@+id/add_money_btn_rv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus_money"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_table_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/add_money_btn_rv">

        <TextView
            style="@style/tableHeadCells"
            android:layout_weight="30"
            android:text="@string/date" />

        <TextView
            style="@style/tableHeadCells"
            android:layout_weight="35"
            android:text="@string/description" />

        <TextView
            style="@style/tableHeadCells"
            android:layout_marginStart="1dp"
            android:layout_weight="25"
            android:text="@string/money" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_revenues"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/ll_table_header"
        app:layout_constraintBottom_toTopOf="@id/tv_total_summ_rv"
        >

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/tv_total_summ_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingEnd="8dp"
        android:layout_marginBottom="50dp"
        android:paddingStart="8dp"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_revenues" />

</android.support.constraint.ConstraintLayout>