<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    tools:context="com.example.zimzik.budget.Activities.NewChorusMember">


    <!--First name field-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_em_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_em_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:hint="@string/first_name" />
    </android.support.design.widget.TextInputLayout>


    <!--Second name fied-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_em_second_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/til_em_first_name">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_em_second_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:hint="@string/second_name" />
    </android.support.design.widget.TextInputLayout>

    <!--Birthday field-->
    <TextView
        android:id="@+id/tv_em_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="26dp"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_date_range_black_24dp"
        android:text="@string/birthday"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/til_em_second_name" />

    <!--underline-->
    <TextView
        android:id="@+id/underline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="#000"
        app:layout_constraintTop_toBottomOf="@id/tv_em_birthday" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_em_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/underline">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_em_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_local_phone_black_24dp"
            android:hint="@string/phone_number"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/save_changes_em_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:background="#00aa8d"
        android:text="@string/save"
        android:textColor="#fff"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_em_phone_number" />

</android.support.constraint.ConstraintLayout>
